<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lab02.m02.FormActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_nombre"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nombre"
                android:inputType="text" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_telefono"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/telefono"
                android:inputType="phone" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/genero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_genero"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/genero"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/masculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/form_genero_m" />

                <RadioButton
                    android:id="@+id/femenino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/form_genero_f" />

            </RadioGroup>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/gustos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_gustos"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/gustos"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/gusto_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/form_gustos_a" />

                <CheckBox
                    android:id="@+id/gusto_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/form_gustos_b" />

                <CheckBox
                    android:id="@+id/gusto_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/form_gustos_c" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_descripcion"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/descripcion"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:lines="5"
                android:singleLine="false" />

        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/form_enviar" />
    </LinearLayout>

</ScrollView>