<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lab02.m02.MovieFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/pelicula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_pelicula"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/pelicula_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pelicula" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/entradas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/form_entrada"
                android:textSize="20sp" />

            <SeekBar
                android:id="@+id/entradas_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/entradas"
                android:max="5" />

            <TextView
                android:id="@+id/pelicula_seekbar_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/entradas_seekbar"
                android:layout_marginTop="5dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/form_servicio"
                android:textSize="20sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton_comprar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/form_cine_comprar" />

            <Button
                android:id="@+id/boton_consultar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/form_cine_consultar" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>