<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lab02.m02.SearchFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/destino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_destino"
                android:textSize="20sp" />

            <AutoCompleteTextView
                android:id="@+id/destino_auto_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/destino" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_fecha"
                android:layout_marginBottom="10dp"
                android:textSize="20sp" />

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="calendar"
                android:layout_below="@id/fecha"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/hora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/form_hora"
                android:textSize="20sp" />

            <TimePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnersShown="true"
                android:layout_below="@id/hora"/>
        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/form_buscar" />
    </LinearLayout>

</ScrollView>